"""empty message

Revision ID: 67a57b1ea462
Revises: bb14b02066e8
Create Date: 2023-12-10 18:38:24.911164

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '67a57b1ea462'
down_revision = 'bb14b02066e8'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('users',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('username', sa.String(length=64), nullable=False),
    sa.Column('email', sa.String(length=256), nullable=False),
    sa.Column('password_hash', sa.String(length=256), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('matches',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('played_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('att_black', sa.Integer(), nullable=False),
    sa.Column('att_white', sa.Integer(), nullable=False),
    sa.Column('def_black', sa.Integer(), nullable=False),
    sa.Column('def_white', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['att_black'], ['users.id'], ),
    sa.ForeignKeyConstraint(['att_white'], ['users.id'], ),
    sa.ForeignKeyConstraint(['def_black'], ['users.id'], ),
    sa.ForeignKeyConstraint(['def_white'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('matches', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_matches_played_at'), ['played_at'], unique=False)

    op.create_table('ratings',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('match_id', sa.Integer(), nullable=False),
    sa.Column('since', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('rating', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['match_id'], ['matches.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('ratings', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_ratings_since'), ['since'], unique=False)

    op.create_table('ratings_att',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('match_id', sa.Integer(), nullable=False),
    sa.Column('since', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('rating', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['match_id'], ['matches.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('ratings_att', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_ratings_att_since'), ['since'], unique=False)

    op.create_table('ratings_def',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('match_id', sa.Integer(), nullable=False),
    sa.Column('since', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('rating', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['match_id'], ['matches.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('ratings_def', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_ratings_def_since'), ['since'], unique=False)

    op.create_table('results',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('match_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('created_by', sa.Integer(), nullable=False),
    sa.Column('checked_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('checked_by', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(length=64), nullable=False),
    sa.Column('score_black', sa.Integer(), nullable=False),
    sa.Column('score_white', sa.Integer(), nullable=False),
    sa.Column('klinker_att_black', sa.Integer(), nullable=False),
    sa.Column('klinker_att_white', sa.Integer(), nullable=False),
    sa.Column('klinker_def_black', sa.Integer(), nullable=False),
    sa.Column('klinker_def_white', sa.Integer(), nullable=False),
    sa.Column('keeper_black', sa.Integer(), nullable=False),
    sa.Column('keeper_white', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['checked_by'], ['users.id'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.ForeignKeyConstraint(['match_id'], ['matches.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('results', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_results_created_at'), ['created_at'], unique=False)

    op.drop_table('user')
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('user',
    sa.Column('id', sa.INTEGER(), nullable=False),
    sa.Column('username', sa.VARCHAR(length=64), nullable=False),
    sa.Column('email', sa.VARCHAR(length=256), nullable=False),
    sa.Column('password_hash', sa.VARCHAR(length=256), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    with op.batch_alter_table('results', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_results_created_at'))

    op.drop_table('results')
    with op.batch_alter_table('ratings_def', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_ratings_def_since'))

    op.drop_table('ratings_def')
    with op.batch_alter_table('ratings_att', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_ratings_att_since'))

    op.drop_table('ratings_att')
    with op.batch_alter_table('ratings', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_ratings_since'))

    op.drop_table('ratings')
    with op.batch_alter_table('matches', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_matches_played_at'))

    op.drop_table('matches')
    op.drop_table('users')
    # ### end Alembic commands ###
